# rsarc

./: .gitignore  Cargo.toml  README.md
presentation/: presentation.tex
report/: 0-abstract.tex  0-title.tex  1-introduction.tex  2-finite-field.tex  3-polynomial.tex  4-implementation.tex  5-conclusions.tex  5-technology.tex  6-appendix.tex  6-conclusions.tex  arithmetic_benchmark.py  arithmetic_benchmark.tex  benchmarks_log_poly.pgf  bibliography.bib  end_to_end_benchmark.csv  full_benchmark.py  math_benchmarks_default.26.csv  math_benchmarks_default.28.csv  math_benchmarks_default.csv  math_benchmarks_no_clmul.26.csv  math_benchmarks_no_clmul.28.csv  math_benchmarks_no_clmul.csv  math_benchmarks_no_clmul_no_lzcnt.26.csv  plot_benchmarks.py  plot_full_benchmark.py  report.tex  requirements.txt  test_both_mul_algos.py
report/archived_presentation_16_01_2025/: .gitignore
report/archived_report/: .gitignore  3-polynomial.tex  4-file-format.tex  generate_figures.py
src/: benchmarks.rs  encoder.rs  end_to_end_test.rs  gf64.rs  header.rs  main.rs  poly_benchmarks.rs  polynomials.rs  progress.rs  reassembler.rs  verifier.rs
src/gf64/: mod.rs  stats.rs
src/math/: benchmarks.rs  mod.rs  novelpoly.rs  polynomials.rs
src/math/gf64/: mod.rs  stats.rs
src/utils/: conversion.rs  mod.rs  progress.rs  test_file.rs  usize_into_u64.rs  win_share_mode.rs  zip_eq.rs
thesis/: .gitignore  1-introduction.tex  2-finite-field.tex  3-polynomial.tex  4-implementation.tex  5-conclusions.tex  arithmetic_benchmark.py  arithmetic_benchmark.tex  benchmark_poly.csv  benchmarks_log_poly.pgf  bibliography.bib  end_to_end_benchmark.csv  end_to_end_benchmark.pgf  full_benchmark.py  plot_benchmarks.py  plot_full_benchmark.py  requirements.txt
thesis/archived_presentation_16_01_2025/: presentation.tex
thesis/archived_report/: 0-abstract.tex  1-introduction.tex  2-finite-field.tex  5-technology.tex  6-conclusions.tex  bibliography.bib  report.tex
