[package]
name = "rsarc"
version = "0.1.0"
edition = "2021"

[features]
# default = ["gf64_stats"]
gf64_stats = []
io_benchmark_no_interpolation = []

[dev-dependencies]
fastrand = "2.3.0"

[dependencies]
blake3 = "1.5.5"
crossbeam-channel = "0.5.14"
indicatif = { version = "0.17.9", default-features = false }
memmap2 = "0.9.5"
num_cpus = "1.16.0"
positioned-io = { version = "0.3.3", default-features = false }
sysinfo = { version = "0.33.0", default-features = false, features = ["system"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
