[package]
name = "rsarc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Reed-Solomon erasure coding utility for repairing file corruption with O(n log n) performance."
repository = "https://github.com/theo543/rsarc"
readme = "./README.md"
categories = ["command-line-utilities"]
keywords = ["reed-solomon", "erasure", "ecc"]
exclude = [
    "*.pdf",
    "report/*",
    ".vscode/*",
]

[features]
gf64_stats = []
no_clmul_check = []
no_lzcnt_check = []
poly_benchmarks = []
math_benchmarks = []

[dependencies]
fastrand = "2.3.0"
blake3 = "1.5.5"
crossbeam-channel = "0.5.15"
indicatif = { version = "0.17.9", default-features = false }
memmap2 = "0.9.5"
num_cpus = "1.16.0"
positioned-io = { version = "0.3.3", default-features = false }
sysinfo = { version = "0.35.1", default-features = false, features = ["system"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
